--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,58 +1,5 @@
-asttokens==3.0.0
-bitarray==2.9.3
-bitstring==4.2.3
-blinker==1.9.0
-cffi==1.17.1
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-cryptography==43.0.3
-debugpy==1.8.12
-decorator==5.2.1
-ecdsa==0.19.0
-esptool==3.3.3
-executing==2.2.0
-Flask==3.1.0
-flask-cors==5.0.1
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.1
-gunicorn==23.0.0
-intelhex==2.3.0
-ipykernel==6.29.5
-ipython==8.32.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-NEURON==8.2.4
-numpy==2.2.3
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-psutil==7.0.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.19.1
-pyserial==3.5
-python-dateutil==2.9.0.post0
-pytz==2025.2
-#pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.1
-reedsolo==1.5.4
-setuptools==75.5.0
-six==1.16.0
-SQLAlchemy==2.0.40
-stack-data==0.6.3
-tornado==6.4.2
-traitlets==5.14.3
-typing_extensions==4.13.2
-tzdata==2025.2
-wcwidth==0.2.13
-Werkzeug==3.1.3
+Flask==2.2.3
+Flask-SQLAlchemy==3.0.0
+Flask-CORS==3.1.1
+pandas==1.5.3
+SQLAlchemy==2.0.19
